# camera_tracking

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  schedule_tracking.py  shell.py
src/api/: __init__.py
src/api/v1/routes/cameras/: __init__.py  logic_handlers.py
src/api/v1/routes/cameras/ping/: __init__.py  logic_handlers.py
src/api/v1/routes/health_check/: __init__.py
src/api/v1/routes/microphones/: __init__.py  logic_handlers.py
src/api/v1/routes/microphones/call/: __init__.py  logic_handlers.py
src/api/v1/routes/microphones/details/: __init__.py  logic_handlers.py
src/api/v1/routes/microphones_details/: __init__.py  logic_handlers.py
src/api/v1/routes/ping/: __init__.py  logic_handlers.py
src/api/v1/routes/settings/: __init__.py  logic_handlers.py
src/bases/api/: auth_handler.py  generators.py  logging_handlers.py  middlewares.py  routes.py
src/bases/client/: __init__.py
src/bases/core/: __init__.py
src/bases/cronjobs/: jobs.py  runners.py
src/bases/databases/: models.py  mongo.py
src/bases/migrator/: __init__.py
src/bases/models/: __init__.py  errors.py  fields.py
src/bases/request_handler/: __init__.py
src/bases/service/: __init__.py
src/bases/workers/: generator.py  task.py
src/clients/: dcerno.py  vhd.py
src/common/: constants.py  decorators.py  dict_utils.py  json_encoders.py  utils.py
src/databases/: __init__.py
src/models/: __init__.py  microphone_mapping.py
src/workers/: __init__.py  scheduler.py  sender.py
src/workers/tasks/: __init__.py  testing.py
(+6 files in other folders)
