[tool.poetry]
name = "camera-tracking"
version = "1.0.0"
description = ""
authors = ["BFC"]

[tool.poetry.dependencies]
python = "^3.10"
pyjwt = "^2.8.0"
jinja2 = "^3.1.3"
cryptography = "^42.0.5"
pyyaml = "^6.0.1"
werkzeug = "^3.0.1"
requests = "^2.31.0"
fastapi-profiler = "^1.3.0"
redis = "^5.0.2"
ipython = "^8.22.2"
click = "^8.1.7"
uvicorn = "^0.27.1"
fastapi = {extras = ["all"], version = "^0.110.0"}
celery = "^5.3.6"
gevent = "^24.2.1"
pymongo = "^4.6.2"
mongoengine = "^0.28.2"
python-slugify = "^8.0.4"
python-json-logger = "^2.0.7"
sentry-sdk = "^2.19.2"
sqlalchemy = "^2.0.36"
python-socketio = "^5.12.0"
cachetools = "^5.5.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
skip-string-normalization = 0
